<resources>
    <string name="app_name">RelojChecadorAlupratic</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Bienvenido</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_inicio">Inicio</string>
    <string name="menu_gestion_empleados">Gestion de empleados</string>
    <string name="menu_reportes">Reportes</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username">Nombre de usuario</string>
    <string name="password">Clave de acceso</string>
    <string name="login">Ingresar al sistema</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_asistencias">Gestion de Asistencias</string>
    <string name="menu_agregar_empleado">Agregar empleado</string>
    <string name="menu_logout">Cerrar sesión</string>

    <string-array name="roles">
        <item>User</item>
        <item>Admin</item>
    </string-array>


    <string-array name="sedes_array">
        <item>1.-Oficinas</item>
        <item>2.-Cedis</item>
        <item>3.-Atlixco</item>
        <item>4.-Ecatepec</item>
        <item>5.-Puebla</item>
        <item>6.-Los Reyes</item>
        <item>7.-Ixtapaluca</item>
        <item>8.-Chalco</item>
    </string-array>

</resources>