<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/ic_menu_inicio"
            android:title="@string/menu_inicio" />
        <item
            android:id="@+id/nav_gestion_empleados"
            android:icon="@drawable/ic_menu_empleados"
            android:title="@string/menu_gestion_empleados" />
        <item
            android:id="@+id/nav_reportes"
            android:icon="@drawable/ic_menu_reportes"
            android:title="@string/menu_reportes" />
        <item
            android:id="@+id/nav_gestion_asistencias"
            android:icon="@drawable/ic_menu_asistencias"
            android:title="@string/menu_asistencias" />
    </group>
</menu>