<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_inicio">

    <fragment
        android:id="@+id/nav_inicio"
        android:name="com.example.relojchecadoralupratic.ui.fragments.inicio.InicioFragment"
        android:label="@string/menu_inicio"
        tools:layout="@layout/fragment_inicio" />

    <fragment
        android:id="@+id/nav_gestion_empleados"
        android:name="com.example.relojchecadoralupratic.ui.fragments.gestionempleados.GestionEmpleadosFragment"
        android:label="@string/menu_gestion_empleados"
        tools:layout="@layout/fragment_gestion_empleados" />

    <fragment
        android:id="@+id/nav_reportes"
        android:name="com.example.relojchecadoralupratic.ui.fragments.reportes.ReportesFragment"
        android:label="@string/menu_reportes"
        tools:layout="@layout/fragment_reportes" />

    <fragment
        android:id="@+id/nav_gestion_asistencias"
        android:name="com.example.relojchecadoralupratic.ui.fragments.Asistencias.AsistenciaFragment"
        android:label="@string/menu_asistencias"
        tools:layout="@layout/fragment_asistencia" />

    <fragment android:id="@+id/nav_addempleados"
        android:name="com.example.relojchecadoralupratic.ui.fragments.gestionempleados.AddEditEmpleadoFragment"
        android:label="@string/menu_agregar_empleado"
        tools:layout="@layout/fragment_add_edit_empleado"/>

    <activity
        android:id="@+id/nav_detalle_empleado"
        android:name="com.example.relojchecadoralupratic.ui.activities.DetalleEmpleadoActivity"
        android:label="Detalle de empleado"
        tools:layout="@layout/activity_detalle_empleado"/>

</navigation>